feat: swagger for basic crud routes
